# hermes-plugin-discord-tools

./: AGENTS.md  Makefile  README.md  __init__.py  hooks.py  plugin.yaml  pyproject.toml  schemas.py  tools.py
tests/: hermes_plugin_loader.py  test_hermes_contract.py  test_hooks.py  test_plugin_registration.py  test_tools.py
